tests/unit/language/overloads/group_name_collision_errors.arche
// RUN: ! %arche build -o %t %s 2>&1

a :: func(x: int) -> int {
  return x;
}
b :: func(x: float) -> float {
  return x;
}
a :: func {
  a, b
}
// error: name 'a' is already declared
